<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itemMain"
            android:icon="@drawable/baseline_gamepad_24"
            android:title="@string/item_main" />
        <item
            android:id="@+id/itemProfile"
            android:icon="@drawable/baseline_gamepad_24"
            android:title="@string/item_profile" />
        <item
            android:id="@+id/itemTrivia"
            android:icon="@drawable/baseline_gamepad_24"
            android:title="@string/item_trivia" />
        <item
            android:id="@+id/itemEvents"
            android:icon="@drawable/baseline_gamepad_24"
            android:title="@string/item_events" />
        <item
            android:id="@+id/itemStarWars"
            android:icon="@drawable/baseline_gamepad_24"
            android:title="@string/item_starwars" />
        <item
            android:id="@+id/itemDogs"
            android:icon="@drawable/baseline_gamepad_24"
            android:title="@string/item_dogs" />
    </group>

    <item android:title="Sesion">
        <menu>
            <item
                android:id="@+id/item_logout"
                android:icon="@drawable/baseline_log_out"
                android:title="Cerrar Sesión" />
        </menu>
    </item>

</menu>
